<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_latte"
    android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/create_student_name_edit_text_box_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="18sp"
            android:layout_margin="50dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/student_id"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="18sp"
            android:layout_margin="50dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="18sp"
            android:layout_margin="50dp"/>

        <TextView
            android:id="@+id/studentDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_with_thick_border"
            android:gravity="center_vertical"
            android:hint="@string/select_a_degree_text_box_hint_for_create_student"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_margin="50dp"/>

        <Button
            android:id="@+id/createStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:onClick="buttonCreateStudent"
            android:text="@string/create_student"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_margin="50dp"/>
</LinearLayout>