<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cosmic_latte">


        <Button
            android:id="@+id/AddStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_gravity="center"
            android:onClick="buttonCreateStudentOnClick"
            android:text="@string/add_student_for_admin_button"
            android:textAllCaps="false" />

        <ListView
            android:id="@+id/listStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cosmic_latte" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/DeleteStudentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonDeleteStudent"
                android:layout_weight="0.5"
                android:text="@string/delete_student_for_admin_button"
                android:layout_margin="10dp"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/DeleteStudentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/edit_text_with_thick_border"
                android:hint="@string/student_id_hint_for_admin_delete_student_text_box"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>

</LinearLayout>