<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_latte"
    tools:context=".presentation.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:background="@color/light_green"
        android:gravity="center">

        <TextView
            android:id="@+id/welcomeMessageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/welcome_message_in_main_activity"
            android:textColor="@color/dark_brown"
            android:textSize="80sp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/welcomeMessageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="125dp"
            android:fontFamily="serif"
            android:text="@string/app_title_in_main_activity"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cosmic_latte"
        android:layout_weight="1"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/hint_for_user_name_text_box_in_log_in_page"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dark_brown"
            android:textSize="18sp"
            android:textColor="@color/dark_brown"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="180dp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_with_thick_border"
            android:hint="@string/hint_for_password_text_box_in_log_in_page"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dark_brown"
            android:textSize="18sp"
            android:textColor="@color/dark_brown"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="180dp"
            tools:ignore="Autofill" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text_in_main_activity"
                android:textSize="18sp"
                android:layout_marginStart="180dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="310dp"
                android:paddingTop="20dp"
                android:text="@string/forgetPassword"
                android:textColor="@color/dark_brown"
                android:textSize="12sp" />

        </RelativeLayout>
        </LinearLayout>


    <EditText
        android:id="@+id/autofocusDummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="number"
        tools:ignore="Autofill">
        <requestFocus />
    </EditText>

</LinearLayout>

